client: Align .main-image & fix #28

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -77,6 +77,7 @@ p {
 
 .continous-text {
   padding-bottom: 5px;
+  font-weight: 200;
 }
 
 .text-center {
@@ -297,7 +298,7 @@ body {
 .main-menu-image {
   height: 35vw;
   width: auto;
-  display: inline-flex;
+  display: inline-block;
   float: right;
   max-height: 200px;
   position: absolute;
@@ -342,7 +343,7 @@ body {
 .main-image {
   height: 35vw;
   width: auto;
-  display: inline-flex;
+  display: inline-block;
   float: right;
   padding-right: 10vw;
   max-height: 500px;
